# MODEL_PREDICTION

./: .gitignore  README.md  app.py  evaluate_meta_model.py  fastapi_app.py  main.py  pyproject.toml  requirements.txt  sitecustomize.py  streamlit_app.py
.stitch/: DESIGN.md  SITE.md  next-prompt.md
scripts/: performance_check.py
src/meta_recommender/: __init__.py  api.py  cli.py  config.py  data_loader.py  evaluator.py  features.py  logging_utils.py  pipeline.py  predictor.py  runtime_utils.py
web-ui/: package-lock.json  package.json  tsconfig.app.json
web-ui/src/: App.tsx
web-ui/src/components/: Dashboard.tsx
