[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-model-recommender"
version = "0.1.0"
description = "Meta-learning system to recommend the best ML model for tabular datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "scikit-learn",
  "xgboost",
  "openml",
  "joblib",
  "streamlit",
  "tqdm"
]

[project.scripts]
meta-recommender = "meta_recommender.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
